Consumo de servicio rest del EndpointGetSimilarProductsIds

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: ms-database-orchestrator-webflux
+  profiles:
+    active: local
 
 management:
   endpoints:
