--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "3.3"
 services:
+  app:
+    build: .
+    ports:
+      - "5000:5000"
   influxdb:
     image: influxdb:1.8.2
     ports:
