Validaciones y creación de exceptionHandlers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     name: ms-database-orchestrator-webflux
   profiles:
     active: local
+  main:
+    web-application-type: "reactive"
 
 management:
   endpoints:
