--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.4.0'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.4.3'
+	implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.0'
 	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.115.Final:osx-aarch_64'
 
 	compileOnly 'org.projectlombok:lombok'
