Configuraciones y refactorización del componente de javascript para las pruebas de k8s

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: ms-database-orchestrator-webflux:latest
     ports:
       - "5000:5000"
